<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_transparent"
     tools:context=".MainActivity">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="#fff"
        >
        <RadioGroup
            android:id="@+id/data_rg_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/data_rb_1"
                style="@style/data_rb_top"
                android:text="@string/data_zc"
                />
            <RadioButton
                android:id="@+id/data_rb_2"
                style="@style/data_rb_top"
                android:text="@string/data_yc"
                />
            <RadioButton
                android:id="@+id/data_rb_3"
                style="@style/data_rb_top"
                android:text="@string/data_yj"
                />
            <RadioButton
                android:id="@+id/data_rb_4"
                style="@style/data_rb_top"
                android:text="@string/data_xj"
                />
            <RadioButton
                android:id="@+id/data_rb_5"
                style="@style/data_rb_top"
                android:text="@string/data_dj"
                />
            <RadioButton
                android:id="@+id/data_rb_6"
                style="@style/data_rb_top"
                android:text="@string/data_og"
                />
            <RadioButton
                android:id="@+id/data_rb_7"
                style="@style/data_rb_top"
                android:text="@string/data_yag"
                />
            <RadioButton
                android:id="@+id/data_rb_8"
                style="@style/data_rb_top"
                android:text="@string/data_zj"
                />

            <RadioButton
                android:id="@+id/data_rb_9"
                style="@style/data_rb_top"
                android:text="@string/data_ol"
                />
            <RadioButton
                android:id="@+id/data_rb_10"
                style="@style/data_rb_top"
                android:text="@string/data_oys"
                />
            <RadioButton
                android:id="@+id/data_rb_11"
                style="@style/data_rb_top"
                android:text="@string/data_fj"
                />
            <RadioButton
                android:id="@+id/data_rb_12"
                style="@style/data_rb_top"
                android:text="@string/data_hj"
                />
            <RadioButton
                android:id="@+id/data_rb_13"
                style="@style/data_rb_top"
                android:text="@string/data_pc"
                />
            <RadioButton
                android:id="@+id/data_rb_14"
                style="@style/data_rb_top"
                android:text="@string/data_ec"
                />
            <RadioButton
                android:id="@+id/data_rb_15"
                style="@style/data_rb_top"
                android:text="@string/data_tc"
                />
            <RadioButton
                android:id="@+id/data_rb_16"
                style="@style/data_rb_top"

                android:text="@string/data_yzb"
                />
            <RadioButton
                android:id="@+id/data_rb_17"
                style="@style/data_rb_top"
                android:text="@string/data_sjb"
                />

            <RadioButton
                android:id="@+id/data_rb_18"
                style="@style/data_rb_top"
                android:text="@string/data_fzb"
                />
        </RadioGroup>

    </HorizontalScrollView>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_data_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >

    </android.support.v4.view.ViewPager>
</LinearLayout>