<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <HorizontalScrollView
        android:id="@+id/hscrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:fillViewport="true"
        >
        <RadioGroup
            android:id="@+id/top_rd_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rd_headline"
                style="@style/Top_rd_group"
                android:text="@string/main_name"
                />
            <RadioButton
                android:id="@+id/rd_video"
                style="@style/Top_rd_group"
                android:text="@string/video"
                />
            <RadioButton
                android:id="@+id/rd_collection"
                style="@style/Top_rd_group"
                android:text="@string/collection"
                />
            <RadioButton
                android:id="@+id/rd_depth"
                style="@style/Top_rd_group"
                android:text="@string/depth"
                />
            <RadioButton
                android:id="@+id/rd_subject"
                style="@style/Top_rd_group"
                android:text="@string/subject"
                />
            <RadioButton
                android:id="@+id/rd_topic"
                style="@style/Top_rd_group"
                android:text="@string/topic"
                />
            <RadioButton
                android:id="@+id/rd_footballer"
                style="@style/Top_rd_group"
                android:text="@string/footballer"
                />
            <RadioButton
                android:id="@+id/rd_xianqing"
                style="@style/Top_rd_group"
                android:text="@string/xianqing"
                />
            <RadioButton
                android:id="@+id/rd_zhongchao"
                style="@style/Top_rd_group"
                android:text="@string/zhongchao"
                />
            <RadioButton
                android:id="@+id/rd_zhongjia"
                style="@style/Top_rd_group"
                android:text="@string/zhongjia"
                />
            <RadioButton
                android:id="@+id/rd_epl"
                style="@style/Top_rd_group"
                android:text="@string/epl"

                />
            <RadioButton
                android:id="@+id/rd_yijia"
                style="@style/Top_rd_group"
                android:text="@string/yijia"
                />
            <RadioButton
                android:id="@+id/rd_xijia"
                style="@style/Top_rd_group"
                android:text="@string/xijia"
                />
            <RadioButton
                android:id="@+id/rd_dejia"
                style="@style/Top_rd_group"
                android:text="@string/dejia"
                />
            <RadioButton
                android:id="@+id/rd_wuzhou"
                style="@style/Top_rd_group"
                android:text="@string/wuzhou"
                />
            <RadioButton
                android:id="@+id/rd_zhuanhui"
                style="@style/Top_rd_group"
                android:text="@string/zhuanhui"
                />
        </RadioGroup>
    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
    android:id="@+id/viewPager_main"
    android:layout_width="match_parent"
    android:layout_height="0dp"
     android:layout_weight="10"
     />
</LinearLayout>