<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#fff"
    android:gravity="center"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        />
    <TextView
        android:id="@+id/text_team"
        android:gravity="left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/data_qiudui"
        />
    <TextView
        android:id="@+id/text_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_chang"/>
    <TextView
        android:id="@+id/text_victory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_sheng"/>
    <TextView
        android:id="@+id/text_fail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_fu"/>
    <TextView
        android:id="@+id/text_draw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_ping"/>
    <TextView
        android:id="@+id/text_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:text="@string/data_jin"/>
    <TextView
        android:id="@+id/text_integral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:text="@string/data_jifeng"/>

</LinearLayout>
