<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="35dp"
    android:gravity="center"
    >
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_ranking"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_qiudui"
        android:textSize="14dp"
        />
    <ImageView

        android:id="@+id/item_img_integral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="35dp"
        android:maxHeight="35dp"
        />

    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_name"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/data_qiudui"
        android:textSize="14dp"
        android:clickable="true"
        />
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_mache"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_chang"/>
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_victory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_sheng"/>
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_fail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_fu"/>
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_draw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_ping"/>
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:text="@string/data_jin"/>
    <TextView
        android:textColor="#fff"
        android:id="@+id/item_text_integral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:text="@string/data_jifeng"/>

</LinearLayout>
