<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MainActivity">
<!--头部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/top_bg"
        >
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/title"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="#FFF"
            />
        <ImageView
            android:id="@+id/img_drawer"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_weight="1"
            android:src="@drawable/ic_drawer"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/viewPager_main"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_weight="8"-->
        <!--android:layout_height="0dp" />-->
    <!--容器-->
    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        />
    <!--底部-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="horizontal"
            android:id="@+id/btm_rd_group"
            >
            <RadioButton
                android:id="@+id/rd_main"
                android:text="@string/btm_main"
                android:drawableTop="@drawable/bottom_rd1_click"
                style="@style/Bottom_rd"
                android:textColor="@drawable/btm_txt_cl_color"
                />
            <RadioButton
                android:id="@+id/rd_game"
                android:text="@string/btm_game"
                android:drawableTop="@drawable/bottom_rd2_click"
                style="@style/Bottom_rd"
                android:textColor="@drawable/btm_txt_cl_color"
                />
            <ImageView
                android:id="@+id/rd_login"
                android:src="@drawable/tab_center_normal"
                android:layout_gravity="center"
                android:background="@drawable/bottom_rd_mid_click"
                style="@style/bottom_img"
                />
            <RadioButton
                android:id="@+id/rd_people"
                android:text="@string/btm_people"
                android:drawableTop="@drawable/bottom_rd3_click"
                style="@style/Bottom_rd"
                android:textColor="@drawable/btm_txt_cl_color"
                />
            <RadioButton
                android:id="@+id/rd_data"
                android:text="@string/btm_data"
                android:drawableTop="@drawable/bottom_rd4_click"
                style="@style/Bottom_rd"
                android:textColor="@drawable/btm_txt_cl_color"
                />
        </RadioGroup>
</LinearLayout>
