<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ds.dongqiudi.TeamActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    >
    <ImageView
        android:id="@+id/team_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#ff00a500"

        />
    <TextView
        android:gravity="center"
        android:background="#ff00a500"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#fff"
        android:textSize="30sp"
        android:text="@string/data_qiudui"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team_img_log"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/team_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/team_img_log"
            android:paddingRight="10dp"
            />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_country"
            android:layout_alignBottom="@+id/team_text_name"
            android:layout_toRightOf="@+id/team_text_name"

            />
        <TextView
            android:id="@+id/team_text_spelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/team_text_name"

            />
        <TextView
            android:id="@+id/team_button_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/team_text_name"
            android:layout_alignBottom="@+id/team_img_log"
            android:clickable="true"
            android:textColor="#fff"
            android:background="#ff00de00"
            android:text="@string/team_watch"
            >
            </TextView>

    </RelativeLayout>

<RadioGroup
    android:id="@+id/team_rg"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.5">
    <RadioButton
        android:gravity="center"
        android:id="@+id/team_rb_1"
        android:button="@null"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@drawable/btm_txt_cl_color"
        android:background="@drawable/button_underscore"
        android:text="@string/team_dongtai"
        />
    <RadioButton
        android:gravity="center"
        android:id="@+id/team_rb_2"
        android:button="@null"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@drawable/btm_txt_cl_color"
        android:background="@drawable/button_underscore"
        android:text="@string/team_saicheng"
        />
    <RadioButton
        android:gravity="center"
        android:id="@+id/team_rb_3"
        android:button="@null"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@drawable/btm_txt_cl_color"
        android:background="@drawable/button_underscore"
        android:text="@string/data_qiuyuan"
        />
    <RadioButton
        android:gravity="center"
        android:id="@+id/team_rb_4"
        android:button="@null"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@drawable/btm_txt_cl_color"
        android:background="@drawable/button_underscore"
        android:text="@string/team_ziliao"
        />
    </RadioGroup>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_team_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >
    </android.support.v4.view.ViewPager>
</LinearLayout>
